--- a/01_Lab_Requirements_Setup.ipynb
+++ b/01_Lab_Requirements_Setup.ipynb
@@ -2,126 +2,66 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "# Lab Requirements and Setup\n",
-    "> IMPORTANT: Notebook requirements and how start YugabyteDB locally (mac/linux) with yb-ctl\n",
     "\n",
-    "This lab consists of several notebooks. Each notebook consists of one or more notebook cells. There are specific requirements for running the notebook cells. Follow the instructions for requirements and setup."
+    "This lab consists of several Jupyter notebooks. Each notebook consists of one or more notebook cells. There are specific requirements for running the notebook cells. Follow the instructions for requirements and setup.\n",
+    "\n",
+    "### Requirements\n",
+    "Here are the requirements for this lab:\n",
+    "- Run in a gitpod workspace\n",
+    "- yb-ctl has a three node cluster up and running, however Gitpod does not support all loopback addresses, so only 127.0.0.1 has available web user interfaces (gp ports list in the terminal)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
-    "## Requirements\n",
-    "Here are the requirements for running the notebooks in this lab:\n",
-    "- Install YugabyteDB Core ( Mac OS or Linux)\n",
-    "- Install the VS Code Jupyter Extension\n",
-    "- Install Python 3.7.9+\n",
-    "- Password for `sudo`"
+    "#### Notebook keyboard shortcuts\n",
+    "| Keystroke | Description |\n",
+    "|--|--|\n",
+    "| ESC | Change the cell mode |\n",
+    "| A | Add a cell above |\n",
+    "| B | Add a cell below |\n",
+    "| J or down arrow key |  Change a cell to below | \n",
+    "| K or up arrow key | Change a cell to above | \n",
+    "| Ctrl+Enter | Run the currently selected cell |\n",
+    "| Shift+Enter | Run the currently selected cell and insert a new cell immediately below (focus moves to new cell) |\n",
+    "| Alt+Enter | Run the currently selected cell and insert a new cell immediately below (focus remains on current cell) |\n",
+    "| dd | Delete a selected cell |\n",
+    "| z | Undo the last change | \n",
+    "| M | switch the cell type to Markdown | \n",
+    "| Y | switch the cell type to code |\n",
+    "| L | Enable/Disable line numbers |\n",
+    "```\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Install YugabyteDB Core\n",
-    "> IMPORTANT\n",
-    "> Do **NOT** run the start command, e.g. `.bin/yugabyted start`\n",
-    "\n",
-    "To install YugabyteDB, for Mac OS:\n",
-    "- Visit https://download.yugabyte.com/#macos\n",
-    "\n",
-    "To install YugabyteDB, for Linux:\n",
-    "- Visit https://download.yugabyte.com/#linux\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Install the VS Code Jupyter Extension\n",
-    "Here are the steps to install the VS Code Jupyter extension:\n",
-    "- In VS Code, in the Sidebar, select Manage (gear icon), then select Extensions.\n",
-    "- In the **Search Extensions** textbox, enter **Jupyter**.\n",
-    "- In the Search panel, select **Jupyter** by Microsoft.\n",
-    "- In the Extensions: Jupyter tab, select Install.\n",
-    "  \n",
-    "To learn more, visit\n",
-    "- https://code.visualstudio.com/docs/datascience/jupyter-notebooks\n",
-    "- https://github.com/microsoft/vscode-jupyter\n",
-    "\n",
-    "#### Helpful keyboard shortcuts\n",
-    "```\n",
-    "ESC : Change the cell mode\n",
-    "A : Add a cell above\n",
-    "B : Add a cell below\n",
-    "J or down arrow key : Change a cell to below\n",
-    "K or up arrow key : Change a cell to above\n",
-    "Ctrl+Enter : Run the currently selected cell\n",
-    "Shift+Enter : Run the currently selected cell and insert a new cell immediately below (focus moves to new cell)\n",
-    "Alt+Enter : Run the currently selected cell and insert a new cell immediately below (focus remains on current cell)\n",
-    "dd : Delete a selected cell\n",
-    "z : Undo the last change\n",
-    "M : switch the cell type to Markdown\n",
-    "Y : switch the cell type to code\n",
-    "L : Enable/Disable line numbers\n",
-    "```\n",
-    "\n",
-    "### Python 3.7.9\n",
-    "The notebooks in this lab use Python 3.7.9. To install Python for the Mac Os or for Linux, follow the steps at \n",
-    "https://www.python.org/downloads/\n",
-    "\n",
-    "For Mac OS users, you can install Python using Homebrew.\n",
-    "\n",
-    "  \n",
-    "### Change YB-TServer port in flag\n",
-    "Because the `ipykernel_launcher` starts off using port `9000` most of the time, this lab will create a YugabyteDB cluster using port `8200` for the YB-TServer, ensuring that there is not a port conflict.\n",
-    "\n",
-    "### Password for `sudo`\n",
-    "To setup the host alias for loopback calls using `ifconfig`, the bash scripts in the the related notebook cells use sudo. \n",
-    "\n",
-    "You have a couple options for supplying the sudo password, all of which are generally insecure:\n",
-    "- change the script itself in the notebook cell\n",
-    "- set the variable in referenced .env file\n",
-    "- use a bash_profile variable\n",
-    "\n",
-    "\n",
-    "You can also just run these scripts in the terminal, which is interactive, and manually enter the sudo password.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "## Setup steps\n",
     "Here are the steps to setup this lab:\n",
-    "- Edit `env_vars.env`\n",
     "- Create the notebook variables\n",
-    "- Create the loopback aliases\n",
-    "- Create the YugabyteDB local cluster\n",
     "- Create the `db_ybu` database"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Edit `env_vars.env` file\n",
-    "Here are the steps to edit the file.\n",
-    "- In the Explorer, select `env_vars.env`.\n",
-    "- In the `env_vars.env` tab, edit the file as needed:\n",
-    "  - Optional: Specify the password for sudo, if that's your preference, with `ENV_SUDO`, and save your changes.\n",
-    "  - Mandatory: Specify the yugabyte installation path"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### Create the notebook variables \n",
     "\n",
@@ -131,8 +71,8 @@
     "> \n",
     "\n",
     "\n",
-    "The following Python cell creates and stors the Jupyter notebook variables.\n",
-    "- First, edit the script to select how to assign a value to `MY_SUDO`.\n",
+    "The following Python cell creates and stores variables that all the notebooks will use. You can view these variables in the Jupyter tab.\n",
+    "\n",
     "- To run the script, select Execute Cell (Play Arrow in the cell side bar).\n",
     "- Verify the accuracy of the output values"
    ]
@@ -140,35 +80,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
     "\n",
+    "# read env_vars.env\n",
     "env_vars = !cat env_vars.env\n",
     "for var in env_vars:\n",
     "    key, value = var.split('=')\n",
     "    os.environ[key] = value\n",
     " \n",
-    "### BEGIN: Edit your MY_SUDO\n",
-    "\n",
-    "# Leave it blank forcing a strategy for notebook execution\n",
-    "# MY_SUDO=''\n",
-    "\n",
-    "# Specify your sudo password in the cell\n",
-    "# MY_SUDO='psswrd'\n",
-    "\n",
-    "# env_vars defines ENV_SUDO='psswrd'\n",
-    "# MY_SUDO=os.environ.get('ENV_SUDO')\n",
-    "\n",
-    "# bash_profile exports the variable, e.g., export GLOBAL_SUDO='psswrd' \n",
-    "MY_SUDO=os.environ.get('GLOBAL_SUDO')\n",
-    "\n",
-    "### END: MY_SUDO\n",
-    "\n",
-    "\n",
-    "# Create and assign notebook variables\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
     "MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
@@ -180,11 +106,10 @@
     "MY_DATA_DML_FILE=os.environ.get(\"MY_DATA_DML_FILE\")\n",
     "MY_UTIL_FUNCTIONS_FILE=os.environ.get(\"MY_UTIL_FUNCTIONS_FILE\")\n",
     "MY_UTIL_YBTSERVER_METRICS_FILE=os.environ.get(\"MY_UTIL_YBTSERVER_METRICS_FILE\")\n",
-    "# Current directory of project and related child folders\n",
     "\n",
+    "# Current directory of project and related child folders\n",
     "MY_NOTEBOOK_DIR=os.getcwd()\n",
     "MY_NOTEBOOK_DATA_FOLDER=MY_NOTEBOOK_DIR +'/data'\n",
-    "\n",
     "MY_NOTEBOOK_UTILS_FOLDER=MY_NOTEBOOK_DIR + '/utils'\n",
     "\n",
     "# Store the note book values for other notebooks to use\n",
@@ -206,16 +131,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create a YugabyteDB local cluster\n",
-    "- If a YugabyteDB local cluster is running, it will be stopped and destroyed using `yugabyted`\n",
-    "- To avoid the port 9000 conflict, specifies port `TSERVER_WEBSERVER_PORT` as `8200`\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### Create the `db_ybu` database with `ysqlsh`\n",
     "- With `ysqlsh`, connect to the local host\n",
@@ -244,12 +163,15 @@
     "./bin/ysqlsh -d yugabyte -c \"create database \"${DB_NAME}\";\" \n",
     "\n",
     "# list dbs\n",
-    "./bin/ysqlsh -d yugabyte -c \"\\l\"\n"
+    "./bin/ysqlsh -d yugabyte -c \"\\l\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### Create Utils\n",
     "For illustration purposes, this lab requires specific user defined functions and objects for the following:\n",
@@ -259,7 +181,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "#### Util Functions"
    ]
@@ -282,9 +207,7 @@
     "\n",
     "\n",
     "#ls $UTIL_FOLDER\n",
-    "\n",
     "UTIL_FUNCTIONS_FILE_PATH=${UTILS_FOLDER}/${UTIL_FUNCTIONS_FILE}\n",
-    "\n",
     "\n",
     "cd $YB_PATH\n",
     "\n",
@@ -292,14 +215,16 @@
     "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_FUNCTIONS_FILE_PATH} \n",
     "sleep 1;\n",
     "\n",
-    "\n",
     "# Describe functions\n",
     "./bin/ysqlsh -d ${DB_NAME} -c \"\\df\""
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "#### Util Metrics"
    ]
@@ -385,7 +310,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "### Create tables and loaded data using DDL and DML scripts\n",
     "- Create tables with a DDL script\n",
@@ -396,7 +324,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "##### Create tables, load data, and review relations"
    ]
@@ -439,7 +370,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "##### View DDL for tbl_countries\n",
     "\n",
@@ -472,7 +406,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "## Connect to YugabyteDB using the PostgreSQL Driver for Python\n",
     "The following cell requires:\n",
@@ -482,7 +419,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "outputs": [],
    "source": [
     "# Connect to db_ybu\n",
@@ -502,7 +442,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "#### Load SQL magic extension\n",
     ">IMPORTANT!\n",
@@ -527,7 +470,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "#### Show table row counts"
    ]
@@ -569,47 +515,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To learn more about the metrices, review the json output for `yb-tserver` metrics\n",
-    "- http://127.0.0.1:8200/metrics\n",
-    "- http://127.0.0.2:8200/metrics\n",
-    "- http://127.0.0.3:8200/metrics\n",
-    "  \n",
-    "For inspiration, see [https://github.com/FranckPachot/ybdemo/blob/main/docker/yb-lab/client/ybwr.sql](https://github.com/FranckPachot/ybdemo/blob/main/docker/yb-lab/client/ybwr.sql)\n",
-    "\n",
-    "See `util_ybtserver_metrics.sql` for these details (python has hard time running AWK command in SQL, so not here)\n",
-    "- Create extension for crosstab\n",
-    "- Delete existing objects\n",
-    "- Create table for metrics as jsonb\n",
-    "- Create function that:\n",
-    "  - deletes # of snapshots\n",
-    "  - greps UI :9000 (or custom... 8200) / metrics for each tablet server in cluster\n",
-    "  - updates snapshot in data by removing system and other database metrics\n",
-    "- Create views to report specific metrics for table id by tablet ids\n",
-    "- Create function for crosstab result"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": false,
+    "editable": false
+   },
    "source": [
     "---\n",
     "# That's It!\n",
     "In this lab, you completed the following:\n",
-    "- Requirement\n",
-    "  - Install YugabyteDB\n",
-    "  - Install the Jupyter Extension\n",
-    "  - Determined how to supply a password for sudo\n",
-    "  - Edited the en_vars.env file\n",
+    "\n",
     "- Setup\n",
-    "  - Created create notebook variables\n",
-    "  - Created the loopback host aliases\n",
-    "  - Created a YugabyteDB local cluster\n",
     "  - Created the `db_ybu` database with `ysqlsh`\n",
+    "  - Created utils\n",
     "  - Created tables and loaded data using DDL and DML scripts\n",
-    "  - Connected to the database using a PostgreSQL driver for Python\n",
-    "  - Create utils"
+    "  - Connected to the database using a PostgreSQL driver for Python\n"
    ]
   }
  ],
